# queSettings

./: CMakeLists.txt  PKGBUILD  start.sh
UI/: mainwindow.ui
resources/: queSettings.desktop
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
